fix: update api description
